--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="Kochanie, to Twoja decyzja" startnode="1" creator="Twine" creator-version="2.3.5" ifid="58841F00-06A4-4FEC-99C2-DACFE5D9BB41" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Twoje imię" tags="" position="700,100" size="100,100">(set: $name to (prompt: &quot;Kochanie, wolisz żeby mówić Ci po imieniu? Jak konkretnie?&quot;, &quot;&quot;))
-(if: $name = &quot;&quot;)[(set: $name to &quot;Kochanie&quot;)]
+<tw-storydata name="Kochanie, to Twoja decyzja" startnode="1" creator="Twine" creator-version="2.3.5" ifid="58841F00-06A4-4FEC-99C2-DACFE5D9BB41" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Twoje imię" tags="" position="700,102" size="100,100">(set: $name to (prompt: &quot;Kochanie, wolisz żeby mówić Ci po imieniu? Jak konkretnie?&quot;, &quot;&quot;))
+(if: $name is &quot;&quot;)[(set: $name to &quot;Kochanie&quot;)]
 (go-to: &quot;To twoja decyzja&quot;)</tw-passagedata><tw-passagedata pid="2" name="To twoja decyzja" tags="" position="700,225" size="100,100">Dlaczego mnie o to pytasz? To naprawdę, &#39;&#39;twoja decyzja&#39;&#39;.
 Rozumiem, że możesz mieć wątpliwości, każdy je ma.
 Przyszedłeś po pomoc. Tego nigdy nie możesz oczekiwać. Wszystkie *dobre rady* to pic na wodę. Uwierz mi, $name.
