--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 (if: $name is &quot;&quot;)[(set: $name to &quot;Kochanie&quot;)]
 (go-to: &quot;To twoja decyzja&quot;)</tw-passagedata><tw-passagedata pid="2" name="To twoja decyzja" tags="" position="700,225" size="100,100">Dlaczego mnie o to pytasz? To naprawdę, &#39;&#39;twoja decyzja&#39;&#39;.
 Rozumiem, że możesz mieć wątpliwości, każdy je ma.
-Przyszedłeś po pomoc. Tego nigdy nie możesz oczekiwać. Wszystkie *dobre rady* to pic na wodę. Uwierz mi, $name.
+Jesteś tu po pomoc. Tego nigdy nie możesz oczekiwać. Wszystkie *dobre rady* to pic na wodę. Uwierz mi, $name.
 Jeśli uważasz, że należy [[rzucić pracę -&gt; Chcesz się zwolnić?]] to nie masz na co czekać.
 Właśnie przez to, że jesteśmy tak blisko, nie możesz ode mnie oczekiwać gotowej odpowiedzi. Taka po prostu nie istnieje. Nie wiem czy nie lepiej po prostu [[przemęczyć się -&gt; Trudno w tej robocie]] i ugrać swoje na przyszłość.</tw-passagedata><tw-passagedata pid="3" name=" Chcesz się zwolnić?" tags="" position="900,400" size="100,100">Taka jest Twoja decyzja? Dobrze!
 Myślisz czy jest właściwa?
